@@ -57,11 +57,14 @@ multi trait_mod:<is>(Attribute $attr, Bool :$serial! where $_ == True --> Empty)
 #| * nullable - marks a column as NULLABLE
 #| * TBD
 multi trait_mod:<is>(Attribute $attr, :%column! --> Empty) is export {
+    if %column<references>:exists and (%column<model-name>:!exists) {
+        die "On Red:api<2> references must declaire :model-name and the references block must receive the model as reference"
+    }
     $attr does Red::Attr::Column(%column);
 }
 
 multi trait_mod:<is>(Attribute $attr, :&referencing! --> Empty) is export {
-    trait_mod:<is>($attr, :column{ :nullable, :references(&referencing) })
+    die 'On Red:api<2> ":model" is required on "is referencing"'
 }
 
 #| Trait that defines a reference
