@@ -4,7 +4,7 @@ model Foo { ... }
 
 model Zub is rw {
     has Int $.id is serial;
-    has Int $.default-foo-id is referencing( { Foo.id } );
+    has Int $.default-foo-id is referencing( *.id, :model<Foo>, :require<TestRed> );
     has Foo $.default-foo is relationship( { .default-foo-id });
     has Foo @.foos is relationship( { .zub-id });
 }
@@ -12,6 +12,6 @@ model Zub is rw {
 model Foo  is rw {
     has Int $.id is serial;
     has Str $.bar is column;
-    has Int $.zub-id is referencing( { Zub.id } );
+    has Int $.zub-id is referencing( *.id, :model<Zub>, :require<TestRed> );
     has Zub $.zub is relationship( { .zub-id });
 }
